# cloudparts

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: cloudparts_pptx.url
examples/: CMakeLists.txt  load_read.cpp
src/: CMakeLists.txt
src/data/: CMakeLists.txt  identification.cpp  identification.h  main.cpp  reference.cpp  reference.h  storage.cpp  storage.h
src/log/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  data.pb.cc  data.pb.h  data.proto  main.cpp  scoped_timer.h  stripe.cpp  stripe.h
